# astonia3-fan-server

./: .gitignore  CMakeLists.txt  Makefile  Makefile.win  RELEASE_NOTES.md  argon.c  badip.c  build_mingw.sh  cc1_help.txt  chat.c  client.h  command.c  config.c  config.h  create_account.c  create_character.c  database.c  depot.c  do.c  docker-compose.yml  io.c  libload.c  lookup.c  mine.c  motd.txt  player.c  player.h  player_driver.c  random.c  run-server-client.ps1  server.c  start  todo.md  tool.h
.github/workflows/: build-server.yml  ci.yml  release.yml
artifacts/: server
artifacts/astonia3-windows-20260320101839/: README.md
artifacts/astonia3-windows-20260322190520/: run-server-client.ps1
astonia_community_server3/: .dockerignore  .gitignore  DOCKER.md  Dockerfile  Makefile.win  argon.c  base.c  command.c  config.c  create_account.c  create_character.c  create_tables.sql  database.c  docker-entrypoint.sh  io.c  mail.c  mem.c  merc.sql  missions.c  player.c  player.h  player_driver.h  rdtsc.c  readme.md  run-server-client.ps1  saltmine.c  server.h  server.md  stop  store.c  tool.c
astonia_community_server3/include/: limits.h  netdb.h  strings.h  unistd.h
astonia_community_server3/include/net/: if.h
astonia_community_server3/include/netinet/: in.h
astonia_community_server3/include/sys/: ioctl.h  socket.h  time.h
config/: server.conf.example
include/: dlfcn.h  execinfo.h  signal.h
include/arpa/: inet.h
include/sys/: mman.h  wait.h
launcher/: Makefile  launcher.c
scripts/: build.sh  release-windows.ps1  release.sh
